Cleaned up the references

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,209 +1,3 @@
-@article{kalyanpur2005debugging,
-  title     = {Debugging unsatisfiable classes in OWL ontologies},
-  author    = {Kalyanpur, Aditya and Parsia, Bijan and Sirin, Evren and Hendler, James},
-  journal   = {Journal of Web Semantics},
-  volume    = {3},
-  number    = {4},
-  pages     = {268--293},
-  year      = {2005},
-  publisher = {Elsevier}
-}
-
-@article{motik2009owl_profiles,
-  title   = {OWL 2 web ontology language profiles},
-  author  = {Motik, Boris and Grau, Bernardo Cuenca and Horrocks, Ian and Wu, Zhe and Fokoue, Achille and Lutz, Carsten and others},
-  journal = {W3C recommendation},
-  volume  = {27},
-  number  = {61},
-  year    = {2009}
-}
-
-@article{motik2009owl_spec,
-  title     = {OWL 2 web ontology language: Structural specification and functional-style syntax},
-  author    = {Motik, Boris and Patel-Schneider, Peter F and Parsia, Bijan and Bock, Conrad and Fokoue, Achille and Haase, Peter and Hoekstra, Rinke and Horrocks, Ian and Ruttenberg, Alan and Sattler, Uli and others},
-  journal   = {W3C recommendation},
-  volume    = {27},
-  number    = {65},
-  pages     = {159},
-  year      = {2009},
-  publisher = {Citeseer}
-}
-
-@article{hitzler2009owl_primer,
-  title   = {OWL 2 web ontology language primer},
-  author  = {Hitzler, Pascal and Kr{\"o}tzsch, Markus and Parsia, Bijan and Patel-Schneider, Peter F and Rudolph, Sebastian and others},
-  journal = {W3C recommendation},
-  volume  = {27},
-  number  = {1},
-  pages   = {123},
-  year    = {2009}
-}
-
-@article{rudolph2011foundations,
-  title     = {Foundations of description logics},
-  author    = {Rudolph, Sebastian},
-  journal   = {Reasoning Web. Semantic Technologies for the Web of Data: 7th International Summer School 2011, Galway, Ireland, August 23-27, 2011, Tutorial Lectures 7},
-  pages     = {76--136},
-  year      = {2011},
-  publisher = {Springer}
-}
-
-@article{horrocks2006even,
-  title   = {The Even More Irresistible SROIQ.},
-  author  = {Horrocks, Ian and Kutz, Oliver and Sattler, Ulrike},
-  journal = {Kr},
-  volume  = {6},
-  pages   = {57--67},
-  year    = {2006}
-}
-
-@unpublished{confalonieri2022irresistible,
-  author      = {Confalonieri, Roberto and Galliani, Pietro and Kutz, Oliver and Porello, Daniele and Righetti, Guendalina and Troquard, Nicolas},
-  title       = {Irresistible Refinement Operators for Expressive Description Logics},
-  year        = {2022},
-  note        = {unpublished},
-  institution = {Free University of Bozen-Bolzano, Italy \& University of Geneva}
-}
-
-@inproceedings{baader2018making,
-  title     = {Making repairs in description logics more gentle},
-  author    = {Baader, Franz and Kriegel, Francesco and Nuradiansyah, Adrian and Pe{\~n}aloza, Rafael},
-  booktitle = {Sixteenth International Conference on Principles of Knowledge Representation and Reasoning},
-  year      = {2018}
-}
-
-@article{reiter1987theory,
-  title     = {A theory of diagnosis from first principles},
-  author    = {Reiter, Raymond},
-  journal   = {Artificial intelligence},
-  volume    = {32},
-  number    = {1},
-  pages     = {57--95},
-  year      = {1987},
-  publisher = {Elsevier}
-}
-
-@article{kalyanpur2007finding,
-  title   = {Finding all justifications of OWL DL entailments},
-  author  = {Kalyanpur, Aditya and Parsia, Bijan and Horridge, Matthew and Sirin, Evren and others},
-  journal = {ISWC/ASWC},
-  volume  = {4825},
-  pages   = {267--280},
-  year    = {2007}
-}
-
-@inproceedings{schlobach2003non,
-  title     = {Non-standard reasoning services for the debugging of description logic terminologies},
-  author    = {Schlobach, Stefan and Cornet, Ronald and others},
-  booktitle = {Ijcai},
-  volume    = {3},
-  pages     = {355--362},
-  year      = {2003}
-}
-
-@article{schlobach2007debugging,
-  title     = {Debugging incoherent terminologies},
-  author    = {Schlobach, Stefan and Huang, Zhisheng and Cornet, Ronald and Van Harmelen, Frank},
-  journal   = {Journal of Automated Reasoning},
-  volume    = {39},
-  pages     = {317--349},
-  year      = {2007},
-  publisher = {Springer}
-}
-
-@inproceedings{junker2004preferred,
-  title     = {Preferred explanations and relaxations for over-constrained problems},
-  author    = {Junker, Ulrich},
-  booktitle = {AAAI-2004},
-  year      = {2004}
-}
-
-@inproceedings{marques2013minimal,
-  title        = {Minimal sets over monotone predicates in boolean formulae},
-  author       = {Marques-Silva, Joao and Janota, Mikol{\'a}{\v{s}} and Belov, Anton},
-  booktitle    = {Computer Aided Verification: 25th International Conference, CAV 2013, Saint Petersburg, Russia, July 13-19, 2013. Proceedings 25},
-  pages        = {592--607},
-  year         = {2013},
-  organization = {Springer}
-}
-
-@inproceedings{shchekotykhin2015mergexplain,
-  title     = {MergeXplain: Fast computation of multiple conflicts for diagnosis},
-  author    = {Shchekotykhin, Kostyantyn and Jannach, Dietmar and Schmitz, Thomas},
-  booktitle = {Twenty-Fourth International Joint Conference on Artificial Intelligence},
-  year      = {2015}
-}
-
-@article{malouf2007maximal,
-  title     = {Maximal consistent subsets},
-  author    = {Malouf, Robert},
-  journal   = {Computational Linguistics},
-  volume    = {33},
-  number    = {2},
-  pages     = {153--160},
-  year      = {2007},
-  publisher = {MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
-}
-
-@inproceedings{horridge2008laconic,
-  title        = {Laconic and precise justifications in OWL},
-  author       = {Horridge, Matthew and Parsia, Bijan and Sattler, Ulrike},
-  booktitle    = {The Semantic Web-ISWC 2008: 7th International Semantic Web Conference, ISWC 2008, Karlsruhe, Germany, October 26-30, 2008. Proceedings 7},
-  pages        = {323--338},
-  year         = {2008},
-  organization = {Springer}
-}
-
-@inproceedings{troquard2018repairing,
-  title     = {Repairing ontologies via axiom weakening},
-  author    = {Troquard, Nicolas and Confalonieri, Roberto and Galliani, Pietro and Penaloza, Rafael and Porello, Daniele and Kutz, Oliver},
-  booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence},
-  volume    = {32},
-  number    = {1},
-  year      = {2018}
-}
-
-@incollection{confalonieri2020towards,
-  author    = {Roberto Confalonieri and
-               Pietro Galliani and
-               Oliver Kutz and
-               Daniele Porello and
-               Guendalina Righetti and
-               Nicolas Troquard},
-  editor    = {Stefan Borgwardt and
-               Thomas Meyer},
-  title     = {Towards Even More Irresistible Axiom Weakening},
-  booktitle = {Proceedings of the 33rd International Workshop on Description Logics
-               (DL 2020) co-located with the 17th International Conference on Principles
-               of Knowledge Representation and Reasoning (KR 2020), Online Event
-               [Rhodes, Greece], September 12th to 14th, 2020},
-  series    = {{CEUR} Workshop Proceedings},
-  volume    = {2663},
-  publisher = {CEUR-WS.org},
-  year      = {2020}
-}
-
-@inproceedings{lam2008fine,
-  title        = {A fine-grained approach to resolving unsatisfiable ontologies},
-  author       = {Lam, Joey Sik Chun and Sleeman, Derek and Pan, Jeff Z and Vasconcelos, Wamberto},
-  booktitle    = {Journal on Data Semantics X},
-  pages        = {62--95},
-  year         = {2008},
-  organization = {Springer}
-}
-
-@book{baader_horrocks_lutz_sattler_2017,
-  author        = {Baader, Franz and Horrocks, Ian and Lutz, Carsten and Sattler, Uli},
-  date-added    = {2019-04-02 15:05:01 +0200},
-  date-modified = {2019-04-02 15:05:01 +0200},
-  doi           = {10.1017/9781139025355},
-  place         = {Cambridge},
-  publisher     = {Cambridge University Press},
-  title         = {An Introduction to Description Logic},
-  year          = {2017},
-  bdsk-url-1    = {https://doi.org/10.1017/9781139025355}
-}
-
 @inproceedings{du2014practical,
   title     = {A practical fine-grained approach to resolving incoherent OWL 2 DL terminologies},
   author    = {Du, Jianfeng and Qi, Guilin and Fu, Xuefeng},
@@ -286,14 +80,21 @@
                Riccardo Rosati and
                Marco Ruzzi and
                Domenico Fabio Savo},
+  editor    = {Pascal Hitzler and
+               Thomas Lukasiewicz},
   title     = {Inconsistency-Tolerant Semantics for Description Logics},
-  booktitle = {Proc. of {RR} 2010},
-  pages     = {103--117},
-  year      = {2010},
-  doi       = {10.1007/978-3-642-15918-3_9},
-  series    = {LNCS},
+  booktitle = {Web Reasoning and Rule Systems - Fourth International Conference,
+               {RR} 2010, Bressanone/Brixen, Italy, September 22-24, 2010. Proceedings},
+  series    = {Lecture Notes in Computer Science},
   volume    = {6333},
-  publisher = {Springer}
+  pages     = {103--117},
+  publisher = {Springer},
+  year      = {2010},
+  opturl    = {https://doi.org/10.1007/978-3-642-15918-3\_9},
+  optdoi    = {10.1007/978-3-642-15918-3\_9},
+  timestamp = {Thu, 02 Feb 2023 16:04:34 +0100},
+  biburl    = {https://dblp.org/rec/conf/rr/LemboLRRS10.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @incollection{Confalonieri16,
@@ -314,28 +115,45 @@
   year      = {2016}
 }
 
-@inproceedings{ScCo03,
+@inproceedings{schlobach2003non,
   author    = {Stefan Schlobach and
                Ronald Cornet},
+  editor    = {Georg Gottlob and
+               Toby Walsh},
   title     = {Non-Standard Reasoning Services for the Debugging of Description Logic
                Terminologies},
-  booktitle = {Proc. of IJCAI-03},
+  booktitle = {{IJCAI-03}, Proceedings of the Eighteenth International Joint Conference
+               on Artificial Intelligence, Acapulco, Mexico, August 9-15, 2003},
   pages     = {355--362},
+  publisher = {Morgan Kaufmann},
   year      = {2003},
-  publisher = {Morgan Kaufmann}
+  opturl    = {http://ijcai.org/Proceedings/03/Papers/053.pdf},
+  timestamp = {Tue, 20 Aug 2019 16:18:41 +0200},
+  biburl    = {https://dblp.org/rec/conf/ijcai/SchlobachC03.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @inproceedings{BaPS07,
   author    = {Franz Baader and
                Rafael Pe{\~{n}}aloza and
                Boontawee Suntisrivaraporn},
+  editor    = {Joachim Hertzberg and
+               Michael Beetz and
+               Roman Englert},
   title     = {Pinpointing in the Description Logic $\mathcal{EL}^+$},
-  booktitle = {Proc. of {KI} 2007},
-  pages     = {52--67},
-  year      = {2007},
-  series    = {LNCS},
+  booktitle = {{KI} 2007: Advances in Artificial Intelligence, 30th Annual German
+               Conference on AI, {KI} 2007, Osnabr{\"{u}}ck, Germany, September
+               10-13, 2007, Proceedings},
+  series    = {Lecture Notes in Computer Science},
   volume    = {4667},
-  publisher = {Springer}
+  pages     = {52--67},
+  publisher = {Springer},
+  year      = {2007},
+  opturl    = {https://doi.org/10.1007/978-3-540-74565-5\_7},
+  optdoi    = {10.1007/978-3-540-74565-5\_7},
+  timestamp = {Tue, 14 May 2019 10:00:49 +0200},
+  biburl    = {https://dblp.org/rec/conf/ki/BaaderPS07.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{LeHi10,
@@ -1360,13 +1178,26 @@
 }
 
 @inproceedings{kalyanpur2006repairing,
-  title        = {Repairing Unsatisfiable Concepts in {OWL} Ontologies.},
-  author       = {Kalyanpur, Aditya and Parsia, Bijan and Sirin, Evren and Grau, Bernardo Cuenca},
-  booktitle    = {ESWC},
-  volume       = {6},
-  pages        = {170--184},
-  year         = {2006},
-  organization = {Springer}
+  author    = {Aditya Kalyanpur and
+               Bijan Parsia and
+               Evren Sirin and
+               Bernardo Cuenca Grau},
+  editor    = {York Sure and
+               John Domingue},
+  title     = {Repairing Unsatisfiable Concepts in {OWL} Ontologies},
+  booktitle = {The Semantic Web: Research and Applications, 3rd European Semantic
+               Web Conference, {ESWC} 2006, Budva, Montenegro, June 11-14, 2006,
+               Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {4011},
+  pages     = {170--184},
+  publisher = {Springer},
+  year      = {2006},
+  opturl    = {https://doi.org/10.1007/11762256\_15},
+  optdoi    = {10.1007/11762256\_15},
+  timestamp = {Fri, 25 Dec 2020 01:15:10 +0100},
+  biburl    = {https://dblp.org/rec/conf/esws/KalyanpurPSG06.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{kalyanpur2005debugging,
@@ -1600,19 +1431,6 @@
   year          = {2011}
 }
 
-@inproceedings{SROIQ,
-  author               = {Horrocks, Ian and Kutz, Oliver and Sattler, Ulrike},
-  booktitle            = {Proc. of KR'06},
-  citeulike-article-id = {957396},
-  keywords             = {description\_logic, ontology, owl},
-  month                = {June},
-  pages                = {57--67},
-  priority             = {3},
-  publisher            = {AAAI Press},
-  title                = {{The Even More Irresistible $\mathcal{SROIQ}$}},
-  year                 = {2006}
-}
-
 @article{Bateman-etal10,
   author        = {Bateman, J. and J. Hois and R. Ross and Tenbrink, T.},
   date-added    = {2010-05-21 01:28:54 +0200},
@@ -1679,7 +1497,7 @@
   publisher = {{AAAI} Press},
   pages     = {1981--1988},
   year      = {2018},
-  url       = {https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/17189}
+  opturl    = {https://www.aaai.org/ocs/index.php/AAAI/AAAI18/paper/view/17189}
 }
 
 @article{AMAI-2018,
@@ -1691,17 +1509,17 @@
   number  = {1-3},
   pages   = {69-99},
   issn    = {1012-2443},
-  doi     = {10.1007/s10472-016-9524-8},
+  optdoi  = {10.1007/s10472-016-9524-8},
   editor  = {Springer Netherlands},
   optnote = {{\bf Impact factor: 1,96}},
-  url     = {https://www.sciencedirect.com/science/article/abs/pii/S0952197615002006}
+  opturl  = {https://www.sciencedirect.com/science/article/abs/pii/S0952197615002006}
 }
 
 @book{baader_horrocks_lutz_sattler_2017,
   author        = {Baader, Franz and Horrocks, Ian and Lutz, Carsten and Sattler, Uli},
   date-added    = {2019-04-02 15:05:01 +0200},
   date-modified = {2019-04-02 15:05:01 +0200},
-  doi           = {10.1017/9781139025355},
+  optdoi        = {10.1017/9781139025355},
   place         = {Cambridge},
   publisher     = {Cambridge University Press},
   title         = {An Introduction to Description Logic},
@@ -1709,7 +1527,7 @@
   bdsk-url-1    = {https://doi.org/10.1017/9781139025355}
 }
 
-@inproceedings{DBLP:conf/kr/BaaderKNP18,
+@inproceedings{baader2018making,
   author    = {Franz Baader and
                Francesco Kriegel and
                Adrian Nuradiansyah and
@@ -1720,13 +1538,13 @@
                30 October - 2 November 2018},
   pages     = {319--328},
   year      = {2018},
-  url       = {https://aaai.org/ocs/index.php/KR/KR18/paper/view/18056},
+  opturl    = {https://aaai.org/ocs/index.php/KR/KR18/paper/view/18056},
   timestamp = {Thu, 18 Oct 2018 09:45:00 +0200},
   biburl    = {https://dblp.org/rec/conf/kr/BaaderKNP18.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{HorrocksKutzSattlerKR2006,
+@inproceedings{horrocks2006even,
   author    = {Ian Horrocks and
                Oliver Kutz and
                Ulrike Sattler},
@@ -1740,7 +1558,7 @@
   pages     = {57--67},
   publisher = {{AAAI} Press},
   year      = {2006},
-  url       = {http://www.aaai.org/Library/KR/2006/kr06-009.php},
+  opturl    = {http://www.aaai.org/Library/KR/2006/kr06-009.php},
   timestamp = {Mon, 18 Nov 2019 15:00:18 +0100},
   biburl    = {https://dblp.org/rec/conf/kr/HorrocksKS06.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
@@ -1748,7 +1566,7 @@
 
 @inproceedings{DBLP:conf/kr/Kazakov08,
   author    = {Yevgeny Kazakov},
-  title     = {{RIQ} and {SROIQ} Are Harder than {SHOIQ}},
+  title     = {{$\mathcal{RIQ}$ and $\mathcal{SROIQ}$ Are Harder than $\mathcal{SHOIQ}$}},
   booktitle = {Principles of Knowledge Representation and Reasoning: Proceedings
                of the Eleventh International Conference, {KR} 2008, Sydney, Australia,
                September 16-19, 2008},
@@ -1843,9 +1661,7 @@
                Thomas Meyer},
   title     = {Towards Even More Irresistible Axiom Weakening},
   booktitle = {Proceedings of the 33rd International Workshop on Description Logics
-               (DL 2020) co-located with the 17th International Conference on Principles
-               of Knowledge Representation and Reasoning (KR 2020), Online Event
-               [Rhodes, Greece], September 12th to 14th, 2020},
+               (DL 2020)},
   volume    = {2663},
   publisher = {CEUR-WS},
   year      = {2020}
@@ -1881,9 +1697,10 @@
 }
 
 @article{horridge2011owl,
-  title     = {The owl api: A java api for owl ontologies},
+  title     = {{The OWL API: A Java API for OWL
+               Ontologies}},
   author    = {Horridge, Matthew and Bechhofer, Sean},
-  journal   = {Semantic web},
+  journal   = {Semantic Web},
   volume    = {2},
   number    = {1},
   pages     = {11--21},
@@ -1905,22 +1722,167 @@
 }
 
 @inproceedings{baader2003least,
-  author        = {Baader, Franz},
-  booktitle     = {IJCAI},
-  date-added    = {2023-06-16 01:12:53 +0200},
-  date-modified = {2023-06-16 01:13:54 +0200},
-  pages         = {319--324},
-  title         = {Least common subsumers and most specific concepts in a description logic with existential restrictions and terminological cycles},
-  volume        = {3},
-  year          = {2003}
+  author    = {Franz Baader},
+  editor    = {Georg Gottlob and
+               Toby Walsh},
+  title     = {Least Common Subsumers and Most Specific Concepts in a Description
+               Logic with Existential Restrictions and Terminological Cycles},
+  booktitle = {{IJCAI-03}, Proceedings of the Eighteenth International Joint Conference
+               on Artificial Intelligence, Acapulco, Mexico, August 9-15, 2003},
+  pages     = {319--324},
+  publisher = {Morgan Kaufmann},
+  year      = {2003},
+  opturl    = {http://ijcai.org/Proceedings/03/Papers/047.pdf},
+  timestamp = {Tue, 20 Aug 2019 16:19:08 +0200},
+  biburl    = {https://dblp.org/rec/conf/ijcai/Baader03.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @inproceedings{Kazakov08,
+  author    = {Yevgeny Kazakov},
+  editor    = {Gerhard Brewka and
+               J{\'{e}}r{\^{o}}me Lang},
+  title     = {{$\mathcal{RIQ}$ and $\mathcal{SROIQ}$ Are Harder than $\mathcal{SHOIQ}$}},
+  booktitle = {Principles of Knowledge Representation and Reasoning: Proceedings
+               of the Eleventh International Conference, {KR} 2008, Sydney, Australia,
+               September 16-19, 2008},
+  pages     = {274--284},
+  publisher = {{AAAI} Press},
+  year      = {2008},
+  opturl    = {http://www.aaai.org/Library/KR/2008/kr08-027.php},
+  timestamp = {Tue, 09 Feb 2021 08:33:40 +0100},
+  biburl    = {https://dblp.org/rec/conf/kr/Kazakov08.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/cade/Kazakov10,
+  author    = {Yevgeny Kazakov},
+  editor    = {J{\"{u}}rgen Giesl and
+               Reiner H{\"{a}}hnle},
+  title     = {{An Extension of Complex Role Inclusion Axioms in the Description Logic
+               $\mathcal{SROIQ}$}},
+  booktitle = {Automated Reasoning, 5th International Joint Conference, {IJCAR} 2010,
+               Edinburgh, UK, July 16-19, 2010. Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {6173},
+  pages     = {472--486},
+  publisher = {Springer},
+  year      = {2010},
+  opturl    = {https://doi.org/10.1007/978-3-642-14203-1\_40},
+  optdoi    = {10.1007/978-3-642-14203-1\_40},
+  timestamp = {Wed, 25 Sep 2019 18:19:14 +0200},
+  biburl    = {https://dblp.org/rec/conf/cade/Kazakov10.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{Kazakov09,
   author        = {Yevgeny Kazakov},
-  booktitle     = {Eleventh International Conference on Principles of Knowledge Representation and Reasoning (KR 2008)},
-  date-added    = {2012-10-14 22:21:34 +0000},
-  date-modified = {2023-06-16 18:44:22 +0200},
-  pages         = {274--284},
-  title         = {{$\mathcal{RIQ}$ and $\mathcal{SROIQ}$ Are Harder than $\mathcal{SHOIQ}$}},
-  year          = {2008}
+  bibsource     = {DBLP, http://dblp.uni-trier.de},
+  booktitle     = {Proceedings of the 22nd International Workshop on Description Logics
+                   (DL 2009)},
+  crossref      = {DBLP:conf/dlog/2009},
+  date-added    = {2010-05-04 20:11:33 +0200},
+  date-modified = {2010-05-04 20:12:23 +0200},
+  ee            = {http://ceur-ws.org/Vol-477/paper_68.pdf},
+  title         = {{An Extension of Regularity Conditions for Complex Role Inclusion Axioms}},
+  year          = {2009}
+}
+
+@article{hitzler2012primer,
+  editor    = {Hitzler, Pascal and Kr{\"o}tzsch, Markus and Parsia, Bijan and Patel-Schneider, Peter F and Rudolph, Sebastian},
+  keywords  = {Model OWL Ontology},
+  title     = {{OWL 2 Web Ontology Language
+Primer (Second Edition)}},
+  url       = {https://www.w3.org/TR/owl2-primer/},
+  year      = 2012
+}
+
+@article{motik2012profiles,
+  editor    = {Motik, Boris and Cuenca Grau, Bernardo and Horrocks, Ian and Wu, Zhe and Fokoue, Achille and Lutz, Carsten},
+  keywords  = {Model OWL Ontology},
+  title     = {{OWL 2 Web Ontology Language
+Profiles (Second Edition)}},
+  url       = {https://www.w3.org/TR/owl2-profiles/},
+  year      = 2012
+}
+
+@article{reiter1987theory,
+  title     = {A theory of diagnosis from first principles},
+  author    = {Reiter, Raymond},
+  journal   = {Artificial intelligence},
+  volume    = {32},
+  number    = {1},
+  pages     = {57--95},
+  year      = {1987},
+  publisher = {Elsevier}
+}
+
+@article{kalyanpur2007finding,
+  title   = {Finding all justifications of OWL DL entailments},
+  author  = {Kalyanpur, Aditya and Parsia, Bijan and Horridge, Matthew and Sirin, Evren and others},
+  journal = {ISWC/ASWC},
+  volume  = {4825},
+  pages   = {267--280},
+  year    = {2007}
+}
+
+@article{schlobach2007debugging,
+  title     = {Debugging incoherent terminologies},
+  author    = {Schlobach, Stefan and Huang, Zhisheng and Cornet, Ronald and Van Harmelen, Frank},
+  journal   = {Journal of Automated Reasoning},
+  volume    = {39},
+  pages     = {317--349},
+  year      = {2007},
+  publisher = {Springer}
+}
+
+@inproceedings{junker2004preferred,
+  title     = {Preferred explanations and relaxations for over-constrained problems},
+  author    = {Junker, Ulrich},
+  booktitle = {AAAI-2004},
+  year      = {2004}
+}
+
+@inproceedings{marques2013minimal,
+  title        = {Minimal sets over monotone predicates in boolean formulae},
+  author       = {Marques-Silva, Joao and Janota, Mikol{\'a}{\v{s}} and Belov, Anton},
+  booktitle    = {Computer Aided Verification: 25th International Conference, CAV 2013, Saint Petersburg, Russia, July 13-19, 2013. Proceedings 25},
+  pages        = {592--607},
+  year         = {2013},
+  organization = {Springer}
+}
+
+@inproceedings{shchekotykhin2015mergexplain,
+  title     = {MergeXplain: Fast computation of multiple conflicts for diagnosis},
+  author    = {Shchekotykhin, Kostyantyn and Jannach, Dietmar and Schmitz, Thomas},
+  booktitle = {Twenty-Fourth International Joint Conference on Artificial Intelligence},
+  year      = {2015}
+}
+
+@article{malouf2007maximal,
+  title     = {Maximal consistent subsets},
+  author    = {Malouf, Robert},
+  journal   = {Computational Linguistics},
+  volume    = {33},
+  number    = {2},
+  pages     = {153--160},
+  year      = {2007},
+  publisher = {MIT Press One Rogers Street, Cambridge, MA 02142-1209, USA journals-info~…}
+}
+
+@inproceedings{horridge2008laconic,
+  title        = {Laconic and precise justifications in OWL},
+  author       = {Horridge, Matthew and Parsia, Bijan and Sattler, Ulrike},
+  booktitle    = {The Semantic Web-ISWC 2008: 7th International Semantic Web Conference, ISWC 2008, Karlsruhe, Germany, October 26-30, 2008. Proceedings 7},
+  pages        = {323--338},
+  year         = {2008},
+  organization = {Springer}
+}
+
+@unpublished{confalonieri2022irresistible,
+  author      = {Confalonieri, Roberto and Galliani, Pietro and Kutz, Oliver and Porello, Daniele and Righetti, Guendalina and Troquard, Nicolas},
+  title       = {Irresistible Refinement Operators for Expressive Description Logics},
+  year        = {2022},
+  note        = {unpublished},
+  institution = {Free University of Bozen-Bolzano, Italy \& University of Geneva}
 }
