--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,7 @@
 \newtheorem*{note}{Note}
 \newtheorem*{remark}{Remark}
 
-\addbibresource{bibliography.bib}
+\addbibresource{biblio.bib}
 
 \allowdisplaybreaks
 \setcounter{tocdepth}{1}
