--- a/sections/b.main/2.background/2.sroiq.tex
+++ b/sections/b.main/2.background/2.sroiq.tex
@@ -43,7 +43,7 @@ where $n > 1$ and $R$, $S$, $S_1, \cdots, S_n$ are roles such that $S \preceq R$
 
 % describe the semantics
 % whats a interpretation, when is it a model
-The semantics of $\mathcal{SROIQ}$ is  defined using \emph{interpretations} $I = \langle \Delta^I, \cdot^I \rangle$, where $\Delta^I$ is a non-empty \emph{domain} and $\cdot^I$ is a function associating to each individual name $a$ an element of the domain $a^I \in \Delta^I$, to each concept $C$ a subset of the domain $C^I \subseteq \Delta^I$, and to each role $R$ a binary relation on the domain $R^I \subseteq \Delta^I \times \Delta^I$; see \cite{baader_horrocks_lutz_sattler_2017,HorrocksKutzSattlerKR2006} or \cref{sroiq-appendix} for further details. An interpretation $I$ is a \emph{model} for $\mathcal{O}$ if it satisfies all the axioms in $\mathcal{O}$.
+The semantics of $\mathcal{SROIQ}$ is  defined using \emph{interpretations} $I = \langle \Delta^I, \cdot^I \rangle$, where $\Delta^I$ is a non-empty \emph{domain} and $\cdot^I$ is a function associating to each individual name $a$ an element of the domain $a^I \in \Delta^I$, to each concept $C$ a subset of the domain $C^I \subseteq \Delta^I$, and to each role $R$ a binary relation on the domain $R^I \subseteq \Delta^I \times \Delta^I$; see \cite{baader_horrocks_lutz_sattler_2017,horrocks2006even} or \cref{sroiq-appendix} for further details. An interpretation $I$ is a \emph{model} for $\mathcal{O}$ if it satisfies all the axioms in $\mathcal{O}$.
 
 % describe subsumptions of concepts and roles
 Given two concepts $C$ and $D$ we say that $C$ is \emph{subsumed} by $D$ (or $D$ \emph{subsumes} $C$) with respect to the ontology $\mathcal{O}$, written $C \sqsubseteq_\mathcal{O} D$, if $C^I \subseteq D^I$ in every model $I$ of $\mathcal{O}$. Further, $C$ is \emph{strictly subsumed by} $D$, written $C \sqsubset_\mathcal{O} D$, if $C \sqsubseteq_\mathcal{O} D$ but not $D \sqsubseteq_\mathcal{O} C$. Analogously, given two roles $R$ and $S$, $R$ is subsumed by $S$ with respect to $\mathcal{O}$ ($R \sqsubseteq_\mathcal{O} S$) if $R^I \sqsubseteq S^I$ in all models $I$ of $\mathcal{O}$. Again, $R \sqsubset_\mathcal{O} S$ holds if $R \sqsubseteq_\mathcal{O} S$ but not $D \sqsubseteq_\mathcal{O} C$.
